src/objects/sf_devops__Deployment_Result__c.object
<CustomObject>
    <description>Stores the results of a metadata deployment to a Salesforce organization</description>
    <fields>
        <fullName>sf_devops__Completion_Date__c</fullName>
        <description>The Datetime when this deployment completed</description>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Deployment_Id__c</fullName>
        <description>The ID of this deployment on the target organization.</description>
        <label>Deployment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Full_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this deployment for all metadata in the repository, or just metadata that we tracked as changed</description>
        <label>Full Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Run_Tests__c</fullName>
        <description>If the test level is RunSpecifiedTests, this is a comma separated list of tests that are run.</description>
        <label>Run Tests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Status__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The status of the promote operation where this deployment is involved.</description>
        <label>Status</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Deployment Results</relationshipLabel>
        <relationshipName>Deployment_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Test_Level__c</fullName>
        <description>One of Default, RunAllTestsInOrg, RunLocalTests or RunSpecifiedTests</description>
        <label>Test Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deployment Result</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Deployment Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>